[tool.poetry]
name = "django-email"
version = "0.1.0"
description = ""
authors = ["Kostiantyn <lynx87@ukr.net>"]
readme = "README.md"
packages = [{include = "django_email"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
